11/5/2024: completely revamped system